--- a/rhel/openvswitch-kmod-fedora.spec.in
+++ b/rhel/openvswitch-kmod-fedora.spec.in
@@ -47,7 +47,7 @@ traffic. This package contains the kernel modules.
 for kv in %{kversion}; do
     mkdir -p _$kv
     (cd _$kv && /bin/cp -f ../configure . && %configure --srcdir=.. \
-        --with-linux=/usr/src/kernels/${kv}/ --enable-ssl)
+        --with-linux=/lib/modules/${kv}/build --enable-ssl)
     make %{_smp_mflags} -C _$kv/datapath/linux
 done
 
