rhel: allow passing more flags to configure, fedora
Define a variable _ovs_config_extra_flags to allow passing more flags to
configure when building OVS kmod RPM. For example, to build with a
non-standard openssl and add an RPATH, use the following command

make rpm-fedora-kmod RPMBUILD_OPT='-D "_ovs_config_extra_flags
--with-openssl=<path to your openssl header> LDFLAGS=\"\${LDFLAGS} -Xlinker
-rpath=<path to your openssl lib>\""'

Signed-off-by: Martin Xu <martinxu9.ovs@gmail.com>
CC: Greg Rose <gvrose8192@gmail.com>
CC: Flavio Leitner <fbl@sysclose.org>
Signed-off-by: Ben Pfaff <blp@ovn.org>
Acked-by: Flavio Leitner <fbl@sysclose.org>
Reviewed-by: Markos Chandras <mchandras@suse.de>

--- a/rhel/openvswitch-kmod-fedora.spec.in
+++ b/rhel/openvswitch-kmod-fedora.spec.in
@@ -47,7 +47,7 @@ traffic. This package contains the kernel modules.
 for kv in %{kversion}; do
     mkdir -p _$kv
     (cd _$kv && /bin/cp -f ../configure . && %configure --srcdir=.. \
-        --with-linux=/lib/modules/${kv}/build --enable-ssl)
+        --with-linux=/lib/modules/${kv}/build --enable-ssl %{_ovs_config_extra_flags})
     make %{_smp_mflags} -C _$kv/datapath/linux
 done
 
